frontend/test/should_fail/ret_009.grg
rule r : (Node, Node) {
	x: Node;
	y: Node;
	
	x -e:Edge-> y;

	modify {
		return(x, e);
	}
}

